Initial project setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone-Rebuil</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcome to my chat app</h1>
   <p>This is the beginning of our journey.</p>
+  <div id="chat-window">
+    <div id="chat-messages">
+      <form id="chat-form">
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
